交易页面完善

--- a/src/langs/modules/zh.json
+++ b/src/langs/modules/zh.json
@@ -443,11 +443,11 @@
       "time": "时间",
       "direction": "方向",
       "publishTime": "发行时间",
-      "publishQuantity": "发行总量",
-      "circulateQuantity": "流通总量",
-      "crowdfundingPrice": "众筹价格",
-      "whiteBook": "白皮书",
-      "officialWebsite": "官网",
+      "publishQuantity": "品牌",
+      "circulateQuantity": "厚度",
+      "crowdfundingPrice": "产地",
+      "whiteBook": "简称",
+      "officialWebsite": "货源",
       "blockQuery": "区块查询",
       "minHour": "分时",
       "1min": "1分",
